--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -5,7 +5,7 @@ import servicesData from './Data/services.json';
 ---
 <Container>
 <div class="relative flex flex-col items-center md:flex-row" id="services">
-    <Topic title="Our Services" description="Our digital marketing agency helps businesses grow and succeed online through a range of services including SEO, PPC, social media marketing, and content creation">
+    <Topic title="Love Economics" description="As a blockchain non-profit we built an economy that is powered by Bitcoin Love cash money and were promoting the creators and brands that accept our Love to make America great again united and healed with Love cash money.">
 </div>
 
 <div class="flex-row items-center py-5">
@@ -28,7 +28,7 @@ import servicesData from './Data/services.json';
                     <div class="w-[41px] h-[41px] relative">
                         <img class="w-[41px] h-[41px] left-0 top-0 absolute" src={arrow} />
                     </div>
-                    <div class="text-xl font-normal leading-7">Learn more</div>
+                    <div class="text-xl font-normal leading-7">Tap In</div>
                 </a>
             </div>
             <div class="w-[210px] h-[170px] pt-0.5 pb-[1.95px] justify-center items-center flex">
@@ -45,10 +45,10 @@ import servicesData from './Data/services.json';
     <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
         <div class="justify-start items-center gap-[275px] flex">
             <div class="flex-col justify-start items-start gap-[26px] inline-flex text-black">
-                <div class="text-3xl font-medium">Let’s make things happen</div>
-                <div class="text-lg font-normal">Contact us today to learn more about how our digital marketing services can help your business grow and succeed online.</div>
-                <a href="/" class="px-[35px] py-5 bg-zinc-900 hover:bg-white text-white hover:text-black border rounded-[14px] justify-start items-start gap-2.5 inline-flex">
-                    <div class="text-center text-xl font-normal leading-7">Get your free proposal</div>
+                <div class="text-3xl font-medium">LIVE FUNRAISES</div>
+                <div class="text-lg font-normal">Schedule a live funraise event show with a chat for live Q&A.</div>
+                <a href="https://live.blkluv.org" class="px-[35px] py-5 bg-zinc-900 hover:bg-white text-white hover:text-black border rounded-[14px] justify-start items-start gap-2.5 inline-flex">
+                    <div class="text-center text-xl font-normal leading-7">WE LIVE</div>
                 </a>
             </div>
         </div>
