--- a/src/components/Testimonial.astro
+++ b/src/components/Testimonial.astro
@@ -4,14 +4,14 @@ import Topic from "./Topic.astro"
 ---
 <Container>
 <div class="relative flex flex-col items-center md:flex-row">
-    <Topic title="Testimonials" description="Hear from Our Satisfied Clients: Read Our Testimonials to Learn More about Our Digital Marketing Services" />
+    <Topic title="Wizard of Hahz" description="The Creator of BLKLUV [ORG] is a blockchain thought leader and develop offering his services for Love Cash Money." />
 </div>
 
 <div class="flex-row items-center my-6 p-14 bg-black text-white rounded-[45px]">
     <div class="justify-items-center relative w-full border border-lime rounded-3xl">
         <div class="p-4 md:p-10">
-            <p class="items-center justify-center text-white text-sm md:text-lg font-normal mb-4">"We have been working with Positivus for the past year and have seen a significant increase in website traffic and leads as a result of their efforts. The team is professional, responsive, and truly cares about the success of our business. We highly recommend Positivus to any company looking to grow their online presence."</p>
-            <span class="text-lime text-base md:text-xl font-medium">John Smith<br/></span><span class="text-white text-lg font-normal">Marketing Director at XYZ Corp</span>
+            <p class="items-center justify-center text-white text-sm md:text-lg font-normal mb-4">"I manifested BLKLUV [ORG] in 2020 and documented everything on the blockchain as proof that belief is currency. I built a multi-million dollar blockchain non-profit solution after being denied every VC funding or financial grant I applied for. All I needed was belief in myself and a love to manifest the purpose economy solution for the world. Follow me down the orange Bitcoin brick road to digital asset ownership for those with a heart."</p>
+            <span class="text-lime text-base md:text-xl font-medium">Wizard of Hahz<br/></span><span class="text-white text-lg font-normal">Chief Bitcoin Officer $CBO</span>
         </div>
     </div>
 </div>
