--- a/src/components/Case.astro
+++ b/src/components/Case.astro
@@ -4,29 +4,29 @@ import Topic from "./Topic.astro"
 ---
 <Container>
 <div class="relative flex flex-col items-center md:flex-row" id="projects">
-    <Topic title="Case Studies" description="Explore Real-Life Examples of Our Proven Digital Marketing Success through Our Case Studies" />
+    <Topic title="Case Studies" description="Explore Real-Life Examples of the power of Love through Our Case Studies" />
 </div>
 
 <div class="w-full p-12 bg-zinc-900 rounded-[45px] justify-start items-start gap-16 inline-flex text-white">
     <div class="grid grid-cols-1 md:grid-cols-3 gap-2 divide-x-0 md:divide-x divide-y md:divide-y-0">
         <div class="flex-col items-start gap-5 inline-flex px-2 md:px-6 py-6 md:py-2">
-            <div class="w-full text-lg font-normal">For a local restaurant, we implemented a targeted PPC campaign that resulted in a 50% increase in website traffic and a 25% increase in sales.</div>
+            <div class="w-full text-lg font-normal">BLKLUV [ORG] has raised over $10M in funds to date.</div>
             <div class="justify-start items-center gap-[15px] inline-flex">
-                <div class="text-lime text-xl font-normal leading-7">Learn more</div>
+                <div class="text-lime text-xl font-normal leading-7">Spread Love</div>
                 <img src="/services/agc.svg" alt="arrow">
             </div>
         </div>
         <div class="flex-col items-start gap-5 inline-flex px-2 md:px-6 py-6 md:py-2">
-            <div class="w-full text-lg font-normal">For a B2B software company, we developed an SEO strategy that resulted in a first page ranking for key keywords and a 200% increase in organic traffic.</div>
+            <div class="w-full text-lg font-normal">50% increase in donations during their live stream and a 25% increase in their overall fan engagement.</div>
             <div class="justify-start items-center gap-[15px] inline-flex">
-                <div class="text-lime text-xl font-normal leading-7">Learn more</div>
+                <div class="text-lime text-xl font-normal leading-7">Spread Love</div>
                 <img src="/services/agc.svg" alt="arrow">
             </div>
         </div>
         <div class="flex-col items-start gap-5 inline-flex px-2 md:px-6 py-6 md:py-2">
-            <div class="w-full text-lg font-normal">For a national retail chain, we created a social media marketing campaign that increased followers by 25% and generated a 20% increase in online sales.</div>
+            <div class="w-full text-lg font-normal">Gen Z is 50% more likely to purchase from brands that are actively engaged in social and environmental causes than other generations.</div>
             <div class="justify-start items-center gap-[15px] inline-flex">
-                <div class="text-lime text-xl font-normal leading-7">Learn more</div>
+                <div class="text-lime text-xl font-normal leading-7">Spread Love</div>
                 <img src="/services/agc.svg" alt="arrow">
             </div>
         </div>
