--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,9 +1,9 @@
 ---
 // Define your navigation links here
 const navLinks = [
-  { href: '/about', label: 'About us' },
-  { href: '/#services', label: 'Services' },
-  { href: '/#projects', label: 'Use Cases' },
+  { href: '/about', label: 'About' },
+  { href: '/#services', label: 'Solutions' },
+  { href: 'https://linktr.ee/blkluvorg', label: 'Linktree' },
   { href: '/pricing', label: 'Pricing' },
   { href: '/blog', label: 'Blog' },
 ];
@@ -32,14 +32,14 @@ import Container from "./Container.astro"
             </li>
             ))}
             <li>
-                <a class="md:hidden px-9 py-5 rounded-2xl border border-zinc-900 bg-white hover:bg-black text-black hover:text-white inline-flex" href="https://github.com/manulthanura/Positivus" target="_blank">
-                  <h2 class="text-center text-xl font-normal leading-7">Request a quot</h2>
+                <a class="md:hidden px-9 py-5 rounded-2xl border border-zinc-900 bg-white hover:bg-black text-black hover:text-white inline-flex" href="https://btv.blkluv.org" target="_blank">
+                  <h2 class="text-center text-xl font-normal leading-7">BTV</h2>
                 </a>
             </li>
         </ul>
       </div>
       <div class="hidden w-full md:block md:w-auto" id="navbar-default">
-        <a class="px-9 py-5 rounded-2xl border border-zinc-900 bg-white hover:bg-black text-black hover:text-white inline-flex" href="https://github.com/manulthanura/Positivus" target="_blank"><h2 class="text-center text-xl font-normal leading-7">Request a quot</h2>
+        <a class="px-9 py-5 rounded-2xl border border-zinc-900 bg-white hover:bg-black text-black hover:text-white inline-flex" href="https://btv.blkluv.org" target="_blank"><h2 class="text-center text-xl font-normal leading-7">BTV</h2>
         </a>
       </div>
     </div>
