--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -7,7 +7,7 @@ import Container from "./Container.astro"
         <div class="text-left space-y-3">
             <h1 class="text-5xl font-medium leading-none md:text-6xl">WE TRUST <br> L$VE CASH <br> MONEY</h1>
             <p class="mt-6 mb-8  text-xl font-normal leading-7 sm:mb-12">Love cash money powers the H2H (Heart 2 Heart) BLK LUV donation economy where purpose is the new profit. Hit the ATM below to create a Love bank account in less than 60 seconds with $0 middleman fees.</p>
-            <a class="px-9 py-5 bg-zinc-900 hover:bg-white text-white hover:text-black border rounded-2xl justify-items-center md:justify-items-start gap-2.5 inline-flex" rel="noopener noreferrer"  href="https://love.blkluv.org" target="_blank">
+            <a class="px-9 py-5 bg-zinc-900 hover:bg-white text-white hover:text-black border rounded-2xl justify-items-center md:justify-items-start gap-2.5 inline-flex" rel="noopener noreferrer"  href="https://atm.blkluv.org" target="_blank">
                 <h2 class="text-center text-xl font-normal leading-7">ATM</h2>
             </a>
         </div>
