--- a/src/components/Team.astro
+++ b/src/components/Team.astro
@@ -7,7 +7,7 @@ import Collapse from "./Collapse.astro";
 ---
 <Container>
     <div class="relative flex flex-col items-center md:flex-row">
-        <Topic title="One Job" description="Step-by-Step Guide to how to monetize Love Cash Money."/>
+        <Topic title="BTV Network" description="Subscribe to create your own BLKLUV Discord BTV channel show for [X amount] Love Cash Money."/>
     </div>
     
     <div class="my-6">
@@ -23,7 +23,7 @@ import Collapse from "./Collapse.astro";
     </div>
     
     <div class="relative flex flex-col items-center md:flex-row pt-6">
-        <Topic title="Team Love" description="We showcase the top 3 team love members on the main page to develop a new social media love algorithm. The rest of the team members are united on our Linktree."/>
+        <Topic title="Tribe Love" description="We honor the top 3 most active Love Cash Money tribe use cases for developing a new social media algorithm, powered by Hahztags, on HAHZ.BLKLUV.org. The rest of our tribe can be found on our LoveTree."/>
     </div>
     
     <div class="flex-row items-center py-5" id="team">
@@ -58,7 +58,7 @@ import Collapse from "./Collapse.astro";
     <div class="w-full justify-center md:justify-end items-center inline-flex">
         <a href="https://linktr.ee/blkluvorg">
             <button class="px-8 py-5 bg-zinc-900 hover:bg-white rounded-2xl text-center text-white hover:text-black border text-xl font-normal leading-7">
-                Linktree
+                Lovetree
             </button>
         </a>
     </div>
