--- a/src/components/Testimonial.astro
+++ b/src/components/Testimonial.astro
@@ -4,7 +4,7 @@ import Topic from "./Topic.astro"
 ---
 <Container>
 <div class="relative flex flex-col items-center md:flex-row">
-    <Topic title="Wizard of Hahz" description="The Creator of BLKLUV [ORG] is a blockchain thought leader and develop offering his services for Love Cash Money." />
+    <Topic title="Wizard of Hahz" description="The Creator of BLKLUV [ORG] is a blockchain thought leader and blockchain master builder offering his services for Love Cash Money." />
 </div>
 
 <div class="flex-row items-center my-6 p-14 bg-black text-white rounded-[45px]">
