--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -11,7 +11,7 @@ import Team from "../components/Team.astro";
                 <div class="row items-center py-5 md:pb-20 md:pt-10">
                     <div class="text-center space-y-10">
                         <h2 class="text-5xl font-medium leading-none md:text-6xl">The Purpose <br> Economy Works <br> For Everyone</h2>
-                        <p class="mt-6 mb-8  text-xl font-normal leading-7 sm:mb-12">Our blockchain non-profit creates for purpose marketing campaign blueprints for the world to accept Bitcoin Love Cash Money as a solution to the masses learning how to monetize their heart by helping others in the digital economy. </p>
+                        <p class="mt-6 mb-8  text-xl font-normal leading-7 sm:mb-12">Our blockchain non-profit creates for purpose marketing campaign blueprints for the world to accept Bitcoin Love Cash Money as a solution to the masses learning how to monetize their heart by helping others in the digital economy guided by the married creator team of Hahz & Candy. </p>
                         <a class="px-9 py-5 bg-zinc-900 hover:bg-white text-white hover:text-black border rounded-2xl justify-items-center md:justify-items-start gap-2.5 inline-flex" rel="noopener noreferrer"  href="https://calendly.com/blkluv" target="_blank">
                             <h2 class="text-center text-xl font-normal leading-7">Book a consultation</h2>
                         </a>
