--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,11 +1,11 @@
 ---
 // Define your navigation links here
 const navLinks = [
-  { href: '/about', label: 'About' },
-  { href: '/#services', label: 'Solutions' },
-  { href: 'https://linktr.ee/blkluvorg', label: 'Linktree' },
-  { href: '/pricing', label: 'Pricing' },
-  { href: '/blog', label: 'Blog' },
+  { href: '/about', label: 'LoveStory' },
+  { href: '/#services', label: 'RevoLution' },
+  { href: 'https://linktr.ee/blkluvorg', label: 'LoveTree' },
+  { href: '/pricing', label: 'LoveMenu' },
+  { href: '/blog', label: 'Blove' },
 ];
 
 import Container from "./Container.astro"
