--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,10 +13,10 @@ import { ViewTransitions } from 'astro:transitions';
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
-    <title>Positivus</title>
+    <title>BLKLUV [ORG]</title>
     <meta
       name="description"
-      content="A beautiful and functional landing page design created specifically for digital marketing agencies. With its clean and modern design, Positivus is the perfect template to showcase your agency's services and case studies to potential clients. Built with astro and tailwindcss"
+      content="A beautiful and functional landing page design created specifically for digital marketing agencies. With its clean and modern design, BLKLUV [ORG] is the perfect template to showcase your agency's services and case studies to potential clients. Built with astro and tailwindcss"
     />
 	<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
   <ViewTransitions />
