--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -3,21 +3,21 @@ import Container from "../components/Container.astro"
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Positivus - Pricing">
+<Layout title="BLKLUV [ORG] - Pricing">
 	<main class="space-y-20">
 		<Container>
             <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6">
                 <div class="mx-auto max-w-screen-md text-center mb-8 lg:mb-12">
-                    <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900">Designed for business teams like yours</h2>
-                    <p class="mb-5 font-light text-gray-500 sm:text-xl">Here at Positivus we focus on markets where technology, innovation, and capital can unlock long-term value and drive economic growth.</p>
+                    <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900">DIY FUNRAISING</h2>
+                    <p class="mb-5 font-light text-gray-500 sm:text-xl">Here at BLKLUV [ORG] we focus on the purpose market econony where technology, innovation, and capital can unlock long-term value and drive economic growth for everyone aligned with the intent.</p>
                 </div>
                 <div class="space-y-8 lg:grid lg:grid-cols-3 sm:gap-6 xl:gap-10 lg:space-y-0">
                     <!-- Pricing Card -->
                     <div class="flex flex-col p-6 mx-auto max-w-lg text-center text-gray-900 bg-white rounded-3xl border border-gray-100 shadow-card ">
-                        <h3 class="mb-4 text-2xl font-semibold">Starter</h3>
-                        <p class="font-light text-gray-500 sm:text-lg">Best option for personal use & for your next project.</p>
+                        <h3 class="mb-4 text-2xl font-semibold">Selfie Love</h3>
+                        <p class="font-light text-gray-500 sm:text-lg">Invest in yourself starting with your BLKLUV 🆔 selfie airdropped to your 🏧 account.</p>
                         <div class="flex justify-center items-baseline my-8">
-                            <span class="mr-2 text-5xl font-extrabold">$29</span>
+                            <span class="mr-2 text-5xl font-extrabold">$19</span>
                             <span class="text-gray-500">/month</span>
                         </div>
                         <!-- List -->
@@ -25,22 +25,22 @@ import Layout from '../layouts/Layout.astro';
                             <li class="flex items-center space-x-3">
                                 <!-- Icon -->
                                 <svg class="flex-shrink-0 w-5 h-5 text-green-500" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
-                                <span>Individual configuration</span>
+                                <span>Base blockchain 🆔</span>
                             </li>
                             <li class="flex items-center space-x-3">
                                 <!-- Icon -->
                                 <svg class="flex-shrink-0 w-5 h-5 text-green-500" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
-                                <span>No setup, or hidden fees</span>
+                                <span>BLKLUV 🆔 #Selfielove repost on HAHZ, TikTok, X</span>
                             </li>
                             <li class="flex items-center space-x-3">
                                 <!-- Icon -->
                                 <svg class="flex-shrink-0 w-5 h-5 text-green-500" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
-                                <span>Team size: <span class="font-semibold">1 developer</span></span>
+                                <span>Tribe size: <span class="font-semibold">1 Chief officer</span></span>
                             </li>
                             <li class="flex items-center space-x-3">
                                 <!-- Icon -->
                                 <svg class="flex-shrink-0 w-5 h-5 text-green-500" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
-                                <span>Premium support: <span class="font-semibold">6 months</span></span>
+                                <span>Premium support: <span class="font-semibold">Access to Tribe channels</span></span>
                             </li>
                             <li class="flex items-center space-x-3">
                                 <!-- Icon -->
@@ -48,7 +48,7 @@ import Layout from '../layouts/Layout.astro';
                                 <span>Free updates: <span class="font-semibold">6 months</span></span>
                             </li>
                         </ul>
-                        <a href="#" class="text-black hover:text-white bg-lime hover:bg-black focus:ring-4 focus:ring-primary-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center">Get started</a>
+                        <a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-8WY0196207870325KM23TOCA" class="text-black hover:text-white bg-lime hover:bg-black focus:ring-4 focus:ring-primary-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center">Subscribe</a>
                     </div>
                     <!-- Pricing Card -->
                     <div class="flex flex-col p-6 mx-auto max-w-lg text-center text-gray-900 bg-white rounded-3xl border border-gray-100 shadow-card ">
@@ -63,37 +63,37 @@ import Layout from '../layouts/Layout.astro';
                             <li class="flex items-center space-x-3">
                                 <!-- Icon -->
                                 <svg class="flex-shrink-0 w-5 h-5 text-green-500" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
-                                <span>Individual configuration</span>
+                                <span>Base 🆔</span>
                             </li>
                             <li class="flex items-center space-x-3">
                                 <!-- Icon -->
                                 <svg class="flex-shrink-0 w-5 h-5 text-green-500" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
-                                <span>No setup, or hidden fees</span>
+                                <span>Discord PPV channel 📺 LoveTree shop channel 📺🔗 </span>
                             </li>
                             <li class="flex items-center space-x-3">
                                 <!-- Icon -->
                                 <svg class="flex-shrink-0 w-5 h-5 text-green-500" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
-                                <span>Team size: <span class="font-semibold">10 developers</span></span>
+                                <span>Tribe size: <span class="font-semibold">10 Chief officers</span></span>
                             </li>
                             <li class="flex items-center space-x-3">
                                 <!-- Icon -->
                                 <svg class="flex-shrink-0 w-5 h-5 text-green-500" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
-                                <span>Premium support: <span class="font-semibold">24 months</span></span>
+                                <span>Premium support: <span class="font-semibold">BLKLUV Story repost ♻️</span></span>
                             </li>
                             <li class="flex items-center space-x-3">
                                 <!-- Icon -->
                                 <svg class="flex-shrink-0 w-5 h-5 text-green-500" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
-                                <span>Free updates: <span class="font-semibold">24 months</span></span>
+                                <span>Guides: <span class="font-semibold">Candy AI 🔑</span></span>
                             </li>
                         </ul>
-                        <a href="#" class="text-black hover:text-white bg-lime hover:bg-black focus:ring-4 focus:ring-primary-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center">Get started</a>
+                        <a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-85Y69262WC690401AM23TQTQ" class="text-black hover:text-white bg-lime hover:bg-black focus:ring-4 focus:ring-primary-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center">Subscribe</a>
                     </div>
                     <!-- Pricing Card -->
                     <div class="flex flex-col p-6 mx-auto max-w-lg text-center text-gray-900 bg-white rounded-3xl border border-gray-100 shadow-card ">
-                        <h3 class="mb-4 text-2xl font-semibold">Enterprise</h3>
-                        <p class="font-light text-gray-500 sm:text-lg">Best for large scale uses and extended redistribution rights.</p>
+                        <h3 class="mb-4 text-2xl font-semibold">CBO</h3>
+                        <p class="font-light text-gray-500 sm:text-lg">CBO (Chief Bitcoin Officer) accepts Bitcoin $CBO for access to their PPV Discord channel with access to the Wizard of Hahz. </p>
                         <div class="flex justify-center items-baseline my-8">
-                            <span class="mr-2 text-5xl font-extrabold">$499</span>
+                            <span class="mr-2 text-5xl font-extrabold">$999</span>
                             <span class="text-gray-500">/month</span>
                         </div>
                         <!-- List -->
@@ -101,30 +101,30 @@ import Layout from '../layouts/Layout.astro';
                             <li class="flex items-center space-x-3">
                                 <!-- Icon -->
                                 <svg class="flex-shrink-0 w-5 h-5 text-green-500" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
-                                <span>Individual configuration</span>
+                                <span>Bitcoin 🆔</span>
                             </li>
                             <li class="flex items-center space-x-3">
                                 <!-- Icon -->
                                 <svg class="flex-shrink-0 w-5 h-5 text-green-500" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
-                                <span>No setup, or hidden fees</span>
+                                <span>Discord Channel 📺 LoveTree link/shop channel 📺🔗</span>
                             </li>
                             <li class="flex items-center space-x-3">
                                 <!-- Icon -->
                                 <svg class="flex-shrink-0 w-5 h-5 text-green-500" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
-                                <span>Team size: <span class="font-semibold">100+ developers</span></span>
+                                <span>Tribe size: <span class="font-semibold">100+</span></span>
                             </li>
                             <li class="flex items-center space-x-3">
                                 <!-- Icon -->
                                 <svg class="flex-shrink-0 w-5 h-5 text-green-500" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
-                                <span>Premium support: <span class="font-semibold">36 months</span></span>
+                                <span>Premium support: <span class="font-semibold">Branded TikTok Effect</span></span>
                             </li>
                             <li class="flex items-center space-x-3">
                                 <!-- Icon -->
                                 <svg class="flex-shrink-0 w-5 h-5 text-green-500" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
-                                <span>Free updates: <span class="font-semibold">36 months</span></span>
+                                <span>Guides: <span class="font-semibold">Candy AI 🔑 Wizard of Hahz</span></span>
                             </li>
                         </ul>
-                        <a href="#" class="text-black hover:text-white bg-lime hover:bg-black focus:ring-4 focus:ring-primary-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center">Get started</a>
+                        <a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-70N916419S086524FM23TRSQ" class="text-black hover:text-white bg-lime hover:bg-black focus:ring-4 focus:ring-primary-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center">Subscribe</a>
                     </div>
                 </div>
             </div>
