--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -52,8 +52,8 @@ import Layout from '../layouts/Layout.astro';
                     </div>
                     <!-- Pricing Card -->
                     <div class="flex flex-col p-6 mx-auto max-w-lg text-center text-gray-900 bg-white rounded-3xl border border-gray-100 shadow-card ">
-                        <h3 class="mb-4 text-2xl font-semibold">Company</h3>
-                        <p class="font-light text-gray-500 sm:text-lg">Relevant for multiple users, extended & premium support.</p>
+                        <h3 class="mb-4 text-2xl font-semibold">Tribe</h3>
+                        <p class="font-light text-gray-500 sm:text-lg">Manage your branded Discord channel with your tribe.</p>
                         <div class="flex justify-center items-baseline my-8">
                             <span class="mr-2 text-5xl font-extrabold">$99</span>
                             <span class="text-gray-500">/month</span>
