--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -5,7 +5,8 @@ const navLinks = [
   { href: '/#services', label: 'RevoLution' },
   { href: 'https://linktr.ee/blkluvorg', label: 'LoveTree' },
   { href: '/pricing', label: 'LoveMenu' },
-  { href: '/blog', label: 'Blove' },
+  { href: '/blog', label: 'How' },
+  { href: 'https://news.blkluv.org', label: 'News' },
 ];
 
 import Container from "./Container.astro"
