--- a/src/components/Team.astro
+++ b/src/components/Team.astro
@@ -23,7 +23,7 @@ import Collapse from "./Collapse.astro";
     </div>
     
     <div class="relative flex flex-col items-center md:flex-row pt-6">
-        <Topic title="Tribe Love" description="We honor the top 3 most active Love Cash Money tribe use cases for developing a new social media algorithm, powered by Hahztags, on HAHZ.BLKLUV.org. The rest of our tribe can be found on our LoveTree."/>
+        <Topic title="Tribe Love" description="Big 3 BLKLUV Tribe members trending via Hahztags, on HAHZ.BLKLUV.org. The rest of our tribe can be found on our LoveTree."/>
     </div>
     
     <div class="flex-row items-center py-5" id="team">
