--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -4,7 +4,7 @@ const navLinks = [
   { href: '/about', label: 'LoveStory' },
   { href: '/#services', label: 'RevoLution' },
   { href: 'https://linktr.ee/blkluvorg', label: 'LoveTree' },
-  { href: '/pricing', label: 'LoveMenu' },
+  { href: '/pricing', label: 'Subscribe' },
   { href: '/blog', label: 'How' },
   { href: 'https://news.blkluv.org', label: 'News' },
 ];
