--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -53,7 +53,7 @@ import Layout from '../layouts/Layout.astro';
                     <!-- Pricing Card -->
                     <div class="flex flex-col p-6 mx-auto max-w-lg text-center text-gray-900 bg-white rounded-3xl border border-gray-100 shadow-card ">
                         <h3 class="mb-4 text-2xl font-semibold">Tribe</h3>
-                        <p class="font-light text-gray-500 sm:text-lg">Manage your branded Discord channel with your tribe.</p>
+                        <p class="font-light text-gray-500 sm:text-lg">Manage your branded Discord channel with your tribe. Add 5 digital/physical links to the LoveTree Shop.</p>
                         <div class="flex justify-center items-baseline my-8">
                             <span class="mr-2 text-5xl font-extrabold">$99</span>
                             <span class="text-gray-500">/month</span>
@@ -63,12 +63,12 @@ import Layout from '../layouts/Layout.astro';
                             <li class="flex items-center space-x-3">
                                 <!-- Icon -->
                                 <svg class="flex-shrink-0 w-5 h-5 text-green-500" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
-                                <span>Base 🆔</span>
+                                <span>ID: Base 🆔</span>
                             </li>
                             <li class="flex items-center space-x-3">
                                 <!-- Icon -->
                                 <svg class="flex-shrink-0 w-5 h-5 text-green-500" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
-                                <span>Discord PPV channel 📺 LoveTree shop channel 📺🔗 </span>
+                                <span>Discord: PPV channel 📺</span>
                             </li>
                             <li class="flex items-center space-x-3">
                                 <!-- Icon -->
@@ -78,7 +78,7 @@ import Layout from '../layouts/Layout.astro';
                             <li class="flex items-center space-x-3">
                                 <!-- Icon -->
                                 <svg class="flex-shrink-0 w-5 h-5 text-green-500" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
-                                <span>Premium support: <span class="font-semibold">BLKLUV Story repost ♻️</span></span>
+                                <span>Premium support: <span class="font-semibold">@BLKLUVTV Story reposts ♻️</span></span>
                             </li>
                             <li class="flex items-center space-x-3">
                                 <!-- Icon -->
@@ -101,12 +101,12 @@ import Layout from '../layouts/Layout.astro';
                             <li class="flex items-center space-x-3">
                                 <!-- Icon -->
                                 <svg class="flex-shrink-0 w-5 h-5 text-green-500" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
-                                <span>Bitcoin 🆔</span>
+                                <span>ID: Bitcoin 🆔</span>
                             </li>
                             <li class="flex items-center space-x-3">
                                 <!-- Icon -->
                                 <svg class="flex-shrink-0 w-5 h-5 text-green-500" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
-                                <span>Discord Channel 📺 LoveTree link/shop channel 📺🔗</span>
+                                <span>Discord: Tribe package + 5 shop links</span>
                             </li>
                             <li class="flex items-center space-x-3">
                                 <!-- Icon -->
