--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -45,7 +45,7 @@ import Layout from '../layouts/Layout.astro';
                             <li class="flex items-center space-x-3">
                                 <!-- Icon -->
                                 <svg class="flex-shrink-0 w-5 h-5 text-green-500" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
-                                <span>Free updates: <span class="font-semibold">6 months</span></span>
+                                <span>Follow train: <span class="font-semibold">TikTok post</span></span>
                             </li>
                         </ul>
                         <a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-8WY0196207870325KM23TOCA" class="text-black hover:text-white bg-lime hover:bg-black focus:ring-4 focus:ring-primary-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center">Subscribe</a>
